Set height to avoid too small rows

--- a/app/assets/stylesheets/content/work_packages/_table_content.sass
+++ b/app/assets/stylesheets/content/work_packages/_table_content.sass
@@ -36,6 +36,7 @@
 .work-package-table--container table.generic-table tbody td
   padding-left: 0
   line-height: 24px
+  height: 41px
 
 // Styles for inline editable attributes
 .work-package-table--container td.-editable
